--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAL_FYExY5v0iWXPcpibLiZKSBDhyciLhA
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyBxmpyCD5pTl01Hr2pVnQXQwpPWkPUaJs8
+
+DATABASE_URL=mongodb+srv://algamarhanif:Q96Ha3jS6vPkYZKY@sig.tx6vylx.mongodb.net/
