complate kiritik dan saran form

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
