--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^12.0.0-alpha.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
